--- a/ProjMongoDBAPI10062024/appsettings.json
+++ b/ProjMongoDBAPI10062024/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ProjMongoDBAPIDataBaseSettings": {
+    "CustomerCollectionName": "Customer",
+    "AddressCollectionName": "Address",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "dbclient10062024"
+  }
+
 }
